# NaoParser

./: .gitignore  CMakeLists.txt  DataGenerator.cpp  DataGenerator.h  DataSelector.cpp  DataSelector.h  NaoMetaAdapter.cpp  NaoMetaAdapter.h  NaoMetaCommon.cpp  NaoMetaCommon.h  NaoMetaData.cpp  NaoMetaData.h  README.md  main.cpp  naometaadapter.cpp  naometaadapter.h  naometacommon.cpp  naometacommon.h  naometadata.cpp  naometadata.h  sexpresso.cpp  sexpresso.hpp  stats.cpp  test.se  test1.se  unittest.cpp
oldscripts/: compile.sh  test.sh
testfiles/: outfile.dat1  outfile.dat2  outfile.dat3  outfile.dat4
